--- a/style.css
+++ b/style.css
@@ -113,6 +113,17 @@ h1{
     color: white;
 }
 
+#calculate-btn{
+    display: block;
+    margin: auto;
+    margin-top: 3rem;
+    padding: 0.6rem 1rem;
+    border-radius: 0.5rem;
+    font-size: 15px;
+    background-color: black;
+    color: white;
+}
+
 #calculate{
     display: block;
     margin: auto;
