--- a/style.css
+++ b/style.css
@@ -7,9 +7,7 @@
 body{
     margin: 0;
     font-family: 'Open Sans', sans-serif;
-    background-image: url(/images/bg-img.jpg);
-    background-size: cover;
-    background-attachment: fixed;
+    background-color: rgb(216, 229, 157);
 }
 .navigation{
     background-color: rgba(0,0,0,0.2);
