--- a/style.css
+++ b/style.css
@@ -80,6 +80,7 @@ h1{
     font-size: 18px;
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
 #output-box{
@@ -109,6 +110,7 @@ h1{
     font-size: 15px;
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
 #calculate-btn{
@@ -120,6 +122,7 @@ h1{
     font-size: 15px;
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 
 #calculate{
@@ -131,6 +134,7 @@ h1{
     font-size: 15px;
     background-color: black;
     color: white;
+    cursor: pointer;
 }
 h3{
     text-align: center;
